--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
@@ -46,14 +46,14 @@
             android:layout_marginEnd="8dp"
             android:drawablePadding="5dp"
             android:ellipsize="end"
+            android:fontFamily="@font/roboto_medium"
             android:includeFontPadding="false"
             android:lines="1"
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
-            android:textStyle="bold"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@+id/lastMessage"
-            app:layout_constraintEnd_toStartOf="@+id/updateDate"
+            app:layout_constraintEnd_toStartOf="@+id/dateStatus"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@+id/avatar"
             app:layout_constraintTop_toTopOf="parent"
@@ -105,7 +105,7 @@
             app:layout_constraintStart_toStartOf="@id/channelTitle" />
 
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytDateStatusView
-            android:id="@+id/updateDate"
+            android:id="@+id/dateStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
@@ -136,7 +136,7 @@
             android:textSize="@dimen/extraSmallTextSize"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/updateDate"
+            app:layout_constraintTop_toBottomOf="@+id/dateStatus"
             tools:text="9"
             tools:visibility="visible" />
 
