--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -74,7 +74,7 @@
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                app:sceytUiChannelTitleTextSize="@dimen/_50sdp" />
+                app:sceytUiStatusIndicatorSize="16dp"/>
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/fabNewChannel"
