Added config to set ChannelsListView.kt last message date format. Added config to set user avatar default image. Added config to enable/disable dark mode. Added logic to get in member in channel, when opening the conversation page, but need improvements.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_channels.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_channels.xml
@@ -2,12 +2,13 @@
 <resources>
     <declare-styleable name="ChannelsListView">
 
-        <!--Background layout TODO-->
+        <!--Background color channel list view-->
         <attr name="sceytUiChannelListBackgroundColor" format="color|reference" />
-        <!-- Background color of channel item layout TODO-->
-        <attr name="sceytUiBackgroundLayoutColor" format="color|reference" />
+        <!-- A color of the online indicator-->
         <attr name="sceytUiOnlineIndicatorColor" format="color|reference" />
+        <!-- A color of the channels divider-->
         <attr name="sceytUiDividerColor" format="color|reference" />
+        <!-- Show/Hide channels divider-->
         <attr name="sceytUiEnableDivider" format="boolean" />
         <!-- A color of the channel title text color-->
         <attr name="sceytUiChannelTitleTextColor" format="reference" />
