--- a/SceytChatUiKit/src/main/res/layout/sceyt_search_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_search_view.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/sceyt_bg_search_view">
+    android:background="@drawable/sceyt_bg_search_view"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icSearch"
@@ -35,7 +36,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/icClear"
         app:layout_constraintStart_toEndOf="@+id/icSearch"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icClear"
