--- a/app/src/main/res/layout/item_selected_user.xml
+++ b/app/src/main/res/layout/item_selected_user.xml
@@ -32,7 +32,7 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/close_btn" />
+            android:src="@drawable/sceyt_close_btn" />
 
     </FrameLayout>
 
