--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
@@ -33,6 +33,7 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/avatar"
             app:layout_constraintEnd_toEndOf="@id/avatar"
+            app:sceytOnlineViewChangeVisibilityWithAnim="true"
             app:sceytOnlineViewIndicatorColor="@color/sceyt_color_green"
             app:sceytOnlineViewStrokeColor="@color/sceyt_color_bg"
             app:sceytOnlineViewStrokeWidth="1.5dp"
