Added some custom attributes in custom views.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_channel_list_empty_state.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_channel_list_empty_state.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="?actionBarSize">
+        android:layout_marginBottom="?android:attr/actionBarSize">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/appCompatImageView2"
