--- a/app/src/main/res/layout/activity_choose_role.xml
+++ b/app/src/main/res/layout/activity_choose_role.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutToolbar"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="?android:attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="5dp">
 
