--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_searchable_toolbar.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_searchable_toolbar.xml
@@ -4,6 +4,7 @@
 
         <attr name="sceytSearchableToolbarTitle" format="string" localization="suggested" />
         <attr name="sceytSearchableToolbarTitleColor" format="reference|color" />
+        <attr name="sceytSearchableToolbarTitleTextSize" format="dimension" />
         <attr name="sceytSearchableToolbarEnableSearch" format="boolean" />
         <attr name="sceytSearchableToolbarIconsTint" format="reference" />
         <attr name="sceytSearchableToolbarBackIcon" format="reference" />
