--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -50,42 +50,45 @@
         android:layout_height="wrap_content"
         android:layout_marginTop=".5dp"
         android:background="@color/sceyt_color_dialog_bg_themed"
-        android:paddingVertical="15dp"
+        android:paddingVertical="12dp"
         app:layout_constraintTop_toBottomOf="@+id/layoutReplayMessage">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/messageInput"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
+            android:layout_marginHorizontal="14dp"
             android:background="@null"
             android:hint="@string/sceyt_message"
             android:includeFontPadding="false"
             android:inputType="textMultiLine"
             android:maxLines="3"
+            android:gravity="center_vertical"
             android:minHeight="24dp"
             android:textColor="@color/sceyt_color_black_themed"
             android:textColorHint="@color/sceyt_color_hint"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/icSendMessage"
-            app:layout_constraintStart_toEndOf="@+id/icAddAttachments" />
+            app:layout_constraintStart_toEndOf="@+id/icAddAttachments"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/icAddAttachments"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="16dp"
-            android:tint="@color/sceyt_color_accent"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:padding="2dp"
+            android:layout_marginStart="14dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/sceyt_ic_upload_file" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/icSendMessage"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:padding="2dp"
+            android:layout_marginEnd="14dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/sceyt_ic_send_message" />
