--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
@@ -47,7 +47,7 @@
         <attr name="sceytReactionViewStrokeCornerRadius" format="integer|dimension" />
         <attr name="sceytReactionViewCountText" format="string|reference" />
         <attr name="sceytReactionViewSmileText" format="string|reference" />
-        <attr name="sceytReactionViewBackgroundColor" format="color|reference|string" />
+        <attr name="sceytReactionViewBackgroundColor" format="color|reference" />
         <attr name="sceytReactionViewCountTextMinWidth" format="integer|dimension" />
     </declare-styleable>
 
