--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -5,6 +5,9 @@
         <attr name="sceytUiMessageIncBubbleColor" format="reference" />
         <attr name="sceytUiMessageOutBubbleColor" format="reference" />
 
+        <attr name="sceytUiDateSeparatorItemTextColor" format="reference|color" />
+        <attr name="sceytUiDateSeparatorItemBackground" format="reference" />
+
 
     </declare-styleable>
 </resources>
