Added logic to customise messages distance by style. Done most reusable date separator item.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -8,6 +8,9 @@
         <attr name="sceytUiDateSeparatorItemTextColor" format="reference|color" />
         <attr name="sceytUiDateSeparatorItemBackground" format="reference" />
 
+        <attr name="sceytUiSameMessageSenderDistance" format="dimension" />
+        <attr name="sceytUiDifferentMessageSenderDistance" format="dimension" />
+
 
     </declare-styleable>
 </resources>
