--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingBottom="4dp">
+    android:layout_height="wrap_content">
 
     <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
         android:id="@+id/avatar"
