--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_loading_more.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_loading_more.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingVertical="5dp">
+    android:layout_height="wrap_content">
 
     <ProgressBar
         android:id="@+id/adapter_list_loading_progress_bar"
