Added logic to customise messages date font. Improved logic to load data by paging in messages and channels pages. Added logic to customize conversation header view, by listeners and builders. Improved presence checker.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -5,11 +5,19 @@
         <attr name="sceytUiMessageIncBubbleColor" format="reference" />
         <attr name="sceytUiMessageOutBubbleColor" format="reference" />
 
+        <!--Date separator item-->
         <attr name="sceytUiDateSeparatorItemTextColor" format="reference|color" />
         <attr name="sceytUiDateSeparatorItemBackground" format="reference" />
+        <attr name="sceytUiDateSeparatorItemTextFont" format="reference" />
+        <attr name="sceytUiDateSeparatorItemTextStyle">
+            <flag name="normal" value="0" />
+            <flag name="bold" value="1" />
+            <flag name="italic" value="2" />
+        </attr>
 
         <attr name="sceytUiSameMessageSenderDistance" format="dimension" />
         <attr name="sceytUiDifferentMessageSenderDistance" format="dimension" />
+
 
 
     </declare-styleable>
