--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -6,7 +6,7 @@
         <attr name="sceytUiMessageOutBubbleColor" format="reference" />
 
         <!--Date separator item-->
-        <attr name="sceytUiDateSeparatorItemTextColor" format="reference|color" />
+        <attr name="sceytUiDateSeparatorItemTextColor" format="reference" />
         <attr name="sceytUiDateSeparatorItemBackground" format="reference" />
         <attr name="sceytUiDateSeparatorItemTextFont" format="reference" />
         <attr name="sceytUiDateSeparatorItemTextStyle">
