Added logic to get channel by url. Added logic to customise message sender name text color. Added logic to add members in CustomConversationInfoActivity.kt.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -5,6 +5,8 @@
         <attr name="sceytUiMessageIncBubbleColor" format="reference" />
         <attr name="sceytUiMessageOutBubbleColor" format="reference" />
 
+        <attr name="sceytUiMessageSenderNameTextColor" format="reference" />
+
         <!--Date separator item-->
         <attr name="sceytUiDateSeparatorItemTextColor" format="reference" />
         <attr name="sceytUiDateSeparatorItemBackground" format="reference" />
@@ -17,8 +19,6 @@
 
         <attr name="sceytUiSameMessageSenderDistance" format="dimension" />
         <attr name="sceytUiDifferentMessageSenderDistance" format="dimension" />
-
-
 
     </declare-styleable>
 </resources>
