--- a/SceytChatUiKit/src/main/res/values/sceyt_strings.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_strings.xml
@@ -82,5 +82,10 @@
     <string name="sceyt_mute_forever">Mute forever</string>
     <string name="sceyt_mute_notifications">Mute notifications</string>
     <string name="sceyt_typing">typing</string>
+    <string name="sceyt_minutes_ago">minutes ago</string>
+    <string name="sceyt_yesterday_at">Yesterday at</string>
+    <string name="sceyt_at">at</string>
+    <string name="sceyt_1_min_ago">1 min ago</string>
+    <string name="sceyt_last_seen">Last seen</string>
 
 </resources>
