--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
@@ -7,5 +7,7 @@
         <attr name="sceytMessageInputHintText" format="string" localization="suggested" />
         <attr name="sceytMessageInputTextColor" format="reference" />
         <attr name="sceytMessageInputHintTextColor" format="reference" />
+        <attr name="sceytMessageInputHorizontalLineColor" format="reference" />
+        <attr name="sceytMessageInputUserNameTextColor" format="reference" />
     </declare-styleable>
 </resources>
