Started creating logic, to scroll conversation into unread messages.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_link_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_link_message.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="10dp">
 
     <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
         android:id="@+id/avatar"
@@ -71,8 +72,8 @@
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="6dp"
             android:autoLink="phone|web|email"
-            android:paddingBottom="8dp"
             android:linksClickable="false"
+            android:paddingBottom="8dp"
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
