--- a/SceytChatUiKit/src/main/res/values/sceyt_strings.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_strings.xml
@@ -87,5 +87,6 @@
     <string name="sceyt_at">at</string>
     <string name="sceyt_1_min_ago">1 minute ago</string>
     <string name="sceyt_last_seen">Last seen</string>
+    <string name="sceyt_new_messages">New messages</string>
 
 </resources>
