Creating logic to show unread messages item in conversation page is in progress. Started creating logic to show scroll to down view.

--- a/SceytChatUiKit/src/main/res/values-night/sceyt_colors.xml
+++ b/SceytChatUiKit/src/main/res/values-night/sceyt_colors.xml
@@ -14,4 +14,5 @@
     <color name="sceyt_color_text_themed">#ffffff</color>
     <color name="sceyt_color_last_message_from">#B1B4C2</color>
     <color name="sceyt_color_dialog_bg_themed">#1A1B2A</color>
+    <color name="sceyt_color_light_themed">#3E4155</color>
 </resources>
