Added logic to mark messages as received. Added logic to send message markers debounced.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -20,6 +20,7 @@
 
         <attr name="sceytUiSameMessageSenderDistance" format="dimension" />
         <attr name="sceytUiDifferentMessageSenderDistance" format="dimension" />
+        <attr name="sceytUiDownScrollerUnreadCountColor" format="dimension" />
 
     </declare-styleable>
 </resources>
