--- a/SceytChatUiKit/src/main/res/layout/scroll_to_bottom_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/scroll_to_bottom_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -35,19 +34,17 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/sceyt_bg_corners_30"
-        android:elevation="20dp"
+        android:elevation="2dp"
         android:includeFontPadding="false"
         android:maxLength="3"
         android:paddingHorizontal="6dp"
         android:paddingVertical="2dp"
         android:singleLine="true"
-        android:text="9"
         android:textColor="@color/sceyt_color_white"
         android:textSize="@dimen/extraSmallTextSize"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
