Fixed bug to customize scroll down unread count color.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -20,7 +20,7 @@
 
         <attr name="sceytUiSameMessageSenderDistance" format="dimension" />
         <attr name="sceytUiDifferentMessageSenderDistance" format="dimension" />
-        <attr name="sceytUiDownScrollerUnreadCountColor" format="dimension" />
+        <attr name="sceytUiDownScrollerUnreadCountColor" format="reference" />
 
     </declare-styleable>
 </resources>
