--- a/SceytChatUiKit/src/main/res/layout/scroll_to_bottom_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/scroll_to_bottom_view.xml
@@ -23,7 +23,7 @@
             android:layout_height="48dp"
             android:background="@drawable/sceyt_bg_circle_with_stroke"
             android:scaleType="center"
-            app:srcCompat="@drawable/ic_arrow_down" />
+            app:srcCompat="@drawable/sceyt_ic_arrow_down" />
 
     </FrameLayout>
 
