--- a/SceytChatUiKit/src/main/res/layout/sceyt_galery_media_picker.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_galery_media_picker.xml
@@ -7,13 +7,13 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:fontFamily="@font/roboto_medium"
+        android:padding="14dp"
         android:text="@string/sceyt_gallery"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="20sp"
-        android:fontFamily="@font/roboto_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,6 +25,12 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="3"
         tools:listitem="@layout/item_gallery_image" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_below="@+id/tvTitle"
+        android:background="@drawable/sceyt_shadow_to_down" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutCounter"
