Improved media picker.

--- a/SceytChatUiKit/src/main/res/layout/item_gallery_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/item_gallery_video.xml
@@ -19,7 +19,7 @@
             android:id="@+id/ivImage"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="#E1E0E0"
+            android:background="@color/sceyt_gallery_item_default_color"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,10 +44,10 @@
             android:layout_margin="6dp"
             android:background="@drawable/sceyt_bg_corners_20"
             android:backgroundTint="#4D000000"
-            android:includeFontPadding="false"
-            android:drawablePadding="5dp"
-            android:paddingHorizontal="7dp"
             android:drawableStart="@drawable/ic_video"
+            android:drawablePadding="5dp"
+            android:includeFontPadding="false"
+            android:paddingHorizontal="7dp"
             android:paddingVertical="3dp"
             android:textColor="@color/sceyt_color_white"
             android:textSize="12sp"
