--- a/SceytChatUiKit/src/main/res/layout/item_gallery_image.xml
+++ b/SceytChatUiKit/src/main/res/layout/item_gallery_image.xml
@@ -19,7 +19,7 @@
             android:id="@+id/ivImage"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="#E1E0E0"
+            android:background="@color/sceyt_gallery_item_default_color"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
