--- a/SceytChatUiKit/src/main/res/drawable/ic_gallery_unchecked_state.xml
+++ b/SceytChatUiKit/src/main/res/drawable/ic_gallery_unchecked_state.xml
@@ -1,23 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
-        <shape android:shape="oval">
-            <solid android:color="#1A000000" />
-        </shape>
-    </item>
-
-    <item android:right="2dp"
-        android:left="2dp"
-        android:top="2dp"
-        android:bottom="2dp">
-
-        <shape android:shape="oval">
-            <stroke
-                android:width="1dp"
-                android:color="@color/sceyt_color_white" />
-        </shape>
-    </item>
-
-</layer-list>
-
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M12,12m-11,0a11,11 0,1 1,22 0a11,11 0,1 1,-22 0"
+      android:fillColor="#17191C"
+      android:fillAlpha="0.2"/>
+  <path
+      android:strokeWidth="1"
+      android:pathData="M12,12m-8.5,0a8.5,8.5 0,1 1,17 0a8.5,8.5 0,1 1,-17 0"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"/>
+</vector>
